--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+body{
+  font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
+}
+
 p {padding:0px 22px;line-height: 30px;width: 610px;}
 
 h2 {width: 540px;padding:0px 30px;box-sizing: content-box;border-left-width:7px; border-left-style:solid; }
